--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Source+Sans+Pro:wght@300;400&display=swap"
       rel="stylesheet"
     />
-    <meta name="description" content="Dampsoft Music Website" />
-    <title>Dampsoft Music</title>
+    <meta name="description" content="Music Website" />
+    <title>Music</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
